--- a/src/main/resources/view/User-Role.fxml
+++ b/src/main/resources/view/User-Role.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -25,23 +26,27 @@
             <GridPane hgap="10" vgap="12">
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" />
-                    <ColumnConstraints prefWidth="300" />
+                    <ColumnConstraints prefWidth="300.0" />
+               <ColumnConstraints maxWidth="294.39996337890625" minWidth="129.60004882812495" prefWidth="129.60004882812495" />
+               <ColumnConstraints maxWidth="471.199951171875" minWidth="305.60003662109375" prefWidth="471.199951171875" />
                 </columnConstraints>
 
                 <Label prefHeight="17.0" prefWidth="67.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="User ID:" textFill="#181357" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <Label fx:id="lblUserId" style="-fx-text-fill: black; -fx-font-weight: bold;" text="1" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label style="-fx-text-fill: black; -fx-font-weight: bold;" text="User Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <TextField fx:id="txtUserName" promptText="John Doe" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label style="-fx-text-fill: black; -fx-font-weight: bold;" text="User Name:" GridPane.rowIndex="2" />
+                <TextField fx:id="txtUserName" promptText="John Doe" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label prefHeight="17.0" prefWidth="65.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Mobile:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <TextField fx:id="txtMobile" promptText="0700000000" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label prefHeight="17.0" prefWidth="65.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Mobile:" GridPane.rowIndex="3" />
+                <TextField fx:id="txtMobile" promptText="0700000000" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label prefHeight="17.0" prefWidth="67.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                <TextField fx:id="txtEmail" promptText="example@email.com" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <Label prefHeight="17.0" prefWidth="67.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Email:" GridPane.rowIndex="4" />
+                <TextField fx:id="txtEmail" promptText="example@email.com" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-                <Label prefHeight="17.0" prefWidth="67.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Role:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                <TextField fx:id="txtRole" promptText="admin" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <Label prefHeight="17.0" prefWidth="67.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Role:" GridPane.rowIndex="5" />
+            <Label style="-fx-font-weight: bold;" text="Password :" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextField fx:id="txtUserId" GridPane.columnIndex="1" />
+            <TextField fx:id="txtPassword" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <ComboBox fx:id="cmbRole" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
                 <rowConstraints>
                     <RowConstraints />
@@ -49,6 +54,7 @@
                     <RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
+               <RowConstraints />
                 </rowConstraints>
             </GridPane>
 
@@ -66,6 +72,7 @@
                     <TableColumn fx:id="colMobile" prefWidth="190.0" style="-fx-font-weight: bold; -fx-text-fill: black;" text="Mobile" />
                     <TableColumn fx:id="colEmail" prefWidth="182.0" style="-fx-font-weight: bold; -fx-text-fill: black;" text="Email" />
                     <TableColumn fx:id="colRole" prefWidth="175.33" style="-fx-font-weight: bold; -fx-text-fill: black;" text="Role" />
+               <TableColumn fx:id="colPassword" prefWidth="190.0" style="-fx-font-weight: bold; -fx-text-fill: black;" text="Password" />
                 </columns>
             </TableView>
         </VBox>
